examples/test/conf/TCPRoute/StreamPlugins/02_EdgionStreamPlugins_allow.yaml
# EdgionStreamPlugins: allow all IPs (for TCPRoute stream plugin positive testing)
apiVersion: edgion.io/v1
kind: EdgionStreamPlugins
metadata:
  name: tcp-allow-all
  namespace: edgion-test
spec:
  plugins:
    - type: IpRestriction
      config:
        defaultAction: allow
