examples/test/conf/TCPRoute/StreamPlugins/05_TCPRoute_deny.yaml
# TCPRoute with deny-all stream plugin
# Uses short name format (namespace inferred from TCPRoute's namespace)
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: tcp-sp-deny
  namespace: edgion-test
  annotations:
    edgion.io/edgion-stream-plugins: "tcp-deny-all"
spec:
  parentRefs:
    - name: tcp-stream-plugins-gw
      namespace: edgion-test
      sectionName: tcp-deny-all
      port: 31275
  rules:
    - backendRefs:
        - name: test-tcp
          port: 30010
          weight: 100
