examples/test/conf/TCPRoute/StreamPlugins/EndpointSlice_test-tcp.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: test-tcp
  namespace: edgion-test
  labels:
    kubernetes.io/service-name: test-tcp
addressType: IPv4
ports:
  - name: tcp-30010
    port: 30010
    protocol: TCP
endpoints:
  - addresses:
      - "127.0.0.1"
    conditions:
      ready: true
