examples/test/conf/TCPRoute/StreamPlugins/Service_test-tcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-tcp
  namespace: edgion-test
spec:
  ports:
    - name: tcp-30010
      port: 30010
      protocol: TCP
      targetPort: 30010
  type: ClusterIP
